# sdlgame

./: .gitignore  CMakeLists.txt  main.cpp
src/: fpscounter.cpp  fpscounter.h  main.cpp  renderdevice.cpp  renderdevice.h
